manifests/kibana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kibana.test`)
      kind: Rule
      services:
        - name: kibana-kb-http
          port: 5601
          scheme: https
          serversTransport: insecuretransport
  tls:
    secretName: kibana-tls
